# a_stock_agent

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: akshare_proxy_allowlist.md
scripts/: check_akshare_proxy_allowlist.py
src/a_stock_agent/: __init__.py  agent.py  akshare_allowlist.py  cli.py  config.py  database.py  knowledge.py  llm.py  market_data.py  tools.py
src/a_stock_agent/adk_app/: __init__.py  agent.py
src/a_stock_agent/api/: app.py  main.py  schemas.py
tests/: test_adk_app.py  test_akshare_allowlist.py  test_api.py  test_config.py  test_database.py  test_knowledge.py  test_market_data.py
